--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -121,7 +121,7 @@
     <Compile Include="ErrorReporter\ErrorReporterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="menu\AddInContext.cs" />
+    <Compile Include="Settings\menu\AddInContext.cs" />
     <Compile Include="Settings\SynchTaggedValues.cs" />
     <Compile Include="Settings\SynchTaggedValuesGenerated.cs">
       <AutoGen>True</AutoGen>
@@ -588,6 +588,9 @@
     <Compile Include="upcc3\Wizards\dev\ui\BdtEditor.xaml.cs">
       <DependentUpon>BdtEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\dev\ui\XsltGeneratorForm.xaml.cs">
+      <DependentUpon>XsltGeneratorForm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="upcc3\Wizards\dev\ui\WSDLGenerator.xaml.cs">
       <DependentUpon>WSDLGenerator.xaml</DependentUpon>
     </Compile>
@@ -615,6 +618,7 @@
     <Compile Include="upcc3\Wizards\dev\ui\UmmInitialPackageStructureCreator.xaml.cs">
       <DependentUpon>UmmInitialPackageStructureCreator.xaml</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\dev\util\XsltGenerator.cs" />
     <Compile Include="upcc3\Wizards\dev\util\IOConnectionItem.cs" />
     <Compile Include="upcc3\Wizards\util\LocalVersionsFile.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\SchemaAnalyzer.xaml.cs">
@@ -679,12 +683,12 @@
     <Compile Include="upcc3\import\cctsndr\ImporterContext.cs" />
     <Compile Include="upcc3\import\util\CustomSchemaReader.cs" />
     <Compile Include="Utils\DictionaryExtensions.cs" />
-    <Compile Include="menu\MenuAction.cs" />
-    <Compile Include="menu\MenuItem.cs" />
-    <Compile Include="menu\MenuLocation.cs" />
-    <Compile Include="menu\MenuManager.cs" />
-    <Compile Include="menu\MenuStringExtensions.cs" />
-    <Compile Include="menu\AddInContextPredicateExtensions.cs" />
+    <Compile Include="Settings\menu\MenuAction.cs" />
+    <Compile Include="Settings\menu\MenuItem.cs" />
+    <Compile Include="Settings\menu\MenuLocation.cs" />
+    <Compile Include="Settings\menu\MenuManager.cs" />
+    <Compile Include="Settings\menu\MenuStringExtensions.cs" />
+    <Compile Include="Settings\menu\AddInContextPredicateExtensions.cs" />
     <Compile Include="Settings\AddInSettings.cs" />
     <None Include="Settings\SynchTaggedValuesGenerated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -1133,6 +1137,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="upcc3\Wizards\dev\ui\BdtEditor.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="upcc3\Wizards\dev\ui\XsltGeneratorForm.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
